feat(projects): add possibility to filter project list for versions
* added input field and frontend handling for version in project filters
* added version field to lucene index definition function for projects
* refactored guava stream to j8 stream
* removed unused private method in ProjectPortlet
* removed unused loggers
* removed unused imports